style: fix some inconsistent styles on mobile devices

--- a/src/components/Home/About/About.module.scss
+++ b/src/components/Home/About/About.module.scss
@@ -94,6 +94,16 @@
   flex-direction: column;
   background-color: var.$white;
   box-shadow: var.$subtle-box-shadow;
+  animation: ease forwards fadeIn 300ms;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 .item {
